cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               pcg-alphabet
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           General purpose library for managing a collection of character state names.

description:        Defines custom types for working with an alphabet of character
                    state names dealing with ambiguity groups.
        

common dependencies

  build-depends:
    base                     >= 4.11      && < 5.0,
    QuickCheck               >= 2.12      && < 3.0,
    semigroups               >= 0.18      && < 1.0,

        
-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation 
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


library

  import:
    dependencies,
    ghc-flags,
    language-specs     

  hs-source-dirs:    
    src

  build-depends:
    pcg-utility,
    pcg-serialize,
    bimap                    >= 0.3       && < 1.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 1.0,
    deepseq                  >= 1.4       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    mtl                      >= 2.0       && < 3.0,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    text-show                >= 3.8.1     && < 4.0,
    transformers             >= 0.5.6     && < 1.0,

  exposed-modules:
    Data.Alphabet
    Data.Alphabet.IUPAC
    Data.Alphabet.Special
 
  other-modules:
    Data.Alphabet.Internal


test-suite test-suite

  import:
    dependencies,
    ghc-flags,
    language-specs

  main-is:
    TestSuite.hs

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  ghc-options:
    -threaded

  build-depends:
    pcg-alphabet,
    tasty                    >= 1.2       && < 2.0,
    tasty-hunit              >= 0.10      && < 1.0,
    tasty-quickcheck         >= 0.9       && < 1.0,
    tasty-rerun              >= 1.1.14    && < 2.0,

  other-modules:
    Data.Alphabet.Test
